# lukasrichtercz

./: .gitignore  .pre-commit-config.yaml  .rosti.state  LICENSE  Makefile  README.md  Rostifile  docker-compose-local.yml  pyproject.toml
.github/: pull_request_template.md
app/: app.py
app/static/: about-me.html  catalogue.html  index.html  price-list.html  robots.txt  sitemap.xml  wip.html
app/static/assets/css/: main.css
app/static/assets/sass/base/: _typography.scss
app/static/assets/sass/components/: _image.scss  _table.scss
app/static/html5up/: index.html
app/static/html5up-bigpicture/: index.html
app/static/html5up-bigpicture/assets/css/: main.css
app/static/html5up-bigpicture/assets/js/: main.js
app/static/html5up-bigpicture/assets/sass/: main.scss
app/static/html5up-bigpicture/assets/sass/components/: _image.scss
app/static/html5up-bigpicture/assets/sass/layout/: _header.scss
app/static/html5up-editorial/: LICENSE.txt  elements.html  generic.html  index.html
app/static/html5up-editorial/assets/css/: main.css
app/static/html5up-editorial/assets/sass/libs/: _vars.scss
app/static/html5up-stellar/: elements.html  index.html
app/static/html5up-stellar/assets/css/: main.css
app/templates/html/: elements.html  footer.html  generic.html  header.html  image-with-license.html  sidebar.html
conf/nginx/: app.conf
conf/supervisor/: nginx.conf
conf/supervisor.d/: nginx.conf
docs/: guideline.md
nginx/: app.conf
