[tool.poetry]
name = "lukasrichtercz"
version = "0.1.0"
description = "My personal website project"
authors = ["Lukáš Richter <richtluk@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
