[tool.black]
line-length = 120

[tool.pylint.'DESIGN']
max-complexity=10

[tool.pylint.'FORMAT']
max-line-length=120

[tool.pylint.'MESSAGES CONTROL']
disable='''missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
'''

[tool.pytest.ini_options]
addopts = "--verbose"

[tool.poetry]
name = "lukasrichtercz"
version = "0.1.0"
description = "My personal website project"
authors = ["Lukáš Richter <richtluk@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
